# meilisearch_embedding_proxy

./: .env.example  .gitignore  DOCKER.md  Dockerfile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_zh.md  build.sh  docker-compose.yml  pyproject.toml  set-proxy-env.sh
src/meilisearch_embedding_proxy/: cli.py  config.py  fastapi_server.py
tests/: test_api.py
